@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2024 Inera AB (http://www.inera.se)
+ * Copyright (C) 2025 Inera AB (http://www.inera.se)
  *
  * This file is part of sklintyg (https://github.com/sklintyg).
  *
@@ -20,23 +20,26 @@ package se.inera.intyg.webcert.web.service.facade.impl;
 
 import java.time.LocalDate;
 import java.time.ZoneId;
-import java.time.format.DateTimeFormatter;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import se.inera.intyg.common.db.support.DbModuleEntryPoint;
 import se.inera.intyg.common.luae_na.support.LuaenaEntryPoint;
 import se.inera.intyg.common.services.texts.IntygTextsService;
+import se.inera.intyg.common.support.facade.model.CertificateStatus;
+import se.inera.intyg.common.support.facade.util.PatientToolkit;
 import se.inera.intyg.common.support.modules.registry.IntygModuleRegistry;
 import se.inera.intyg.infra.security.authorities.AuthoritiesHelper;
+import se.inera.intyg.infra.security.authorities.FeaturesHelper;
 import se.inera.intyg.infra.security.common.model.AuthoritiesConstants;
 import se.inera.intyg.schemas.contract.Personnummer;
 import se.inera.intyg.webcert.web.service.facade.CertificateTypeMessageService;
 import se.inera.intyg.webcert.web.service.facade.GetCertificateTypesFacadeService;
 import se.inera.intyg.webcert.web.service.facade.impl.certificatefunctions.MissingRelatedCertificateConfirmation;
 import se.inera.intyg.webcert.web.service.facade.impl.certificatefunctions.ResourceLinkFactory;
+import se.inera.intyg.webcert.web.service.facade.modal.confirmation.ConfirmationModalProviderResolver;
+import se.inera.intyg.webcert.web.service.patient.PatientDetailsResolver;
 import se.inera.intyg.webcert.web.service.user.WebCertUserService;
 import se.inera.intyg.webcert.web.web.controller.api.dto.IntygModuleDTO;
 import se.inera.intyg.webcert.web.web.controller.facade.dto.CertificateTypeInfoDTO;
@@ -46,7 +49,7 @@ import se.inera.intyg.webcert.web.web.util.resourcelinks.ResourceLinkHelper;
 import se.inera.intyg.webcert.web.web.util.resourcelinks.dto.ActionLink;
 import se.inera.intyg.webcert.web.web.util.resourcelinks.dto.ActionLinkType;
 
-@Service
+@Service("getCertificateTypeInfoFromWebcert")
 public class GetCertificateTypesFacadeServiceImpl implements GetCertificateTypesFacadeService {
 
     private final IntygModuleRegistry intygModuleRegistry;
@@ -55,21 +58,25 @@ public class GetCertificateTypesFacadeServiceImpl implements GetCertificateTypes
     private final WebCertUserService webCertUserService;
     private final IntygTextsService intygTextsService;
     private final CertificateTypeMessageService certificateTypeMessageService;
-
+    private final PatientDetailsResolver patientDetailsResolver;
     private final MissingRelatedCertificateConfirmation missingRelatedCertificateConfirmation;
+    private final FeaturesHelper featuresHelper;
 
     @Autowired
     public GetCertificateTypesFacadeServiceImpl(IntygModuleRegistry intygModuleRegistry, ResourceLinkHelper resourceLinkHelper,
         AuthoritiesHelper authoritiesHelper, WebCertUserService webCertUserService,
         IntygTextsService intygTextsService, CertificateTypeMessageService certificateTypeMessageService,
-        MissingRelatedCertificateConfirmation missingRelatedCertificateConfirmation) {
+        PatientDetailsResolver patientDetailsResolver,
+        MissingRelatedCertificateConfirmation missingRelatedCertificateConfirmation, FeaturesHelper featuresHelper) {
         this.intygModuleRegistry = intygModuleRegistry;
         this.resourceLinkHelper = resourceLinkHelper;
         this.authoritiesHelper = authoritiesHelper;
         this.webCertUserService = webCertUserService;
         this.intygTextsService = intygTextsService;
         this.certificateTypeMessageService = certificateTypeMessageService;
+        this.patientDetailsResolver = patientDetailsResolver;
         this.missingRelatedCertificateConfirmation = missingRelatedCertificateConfirmation;
+        this.featuresHelper = featuresHelper;
     }
 
     @Override
@@ -78,18 +85,33 @@ public class GetCertificateTypesFacadeServiceImpl implements GetCertificateTypes
         return certificateModuleList.stream()
             .map(module -> convertModuleToTypeInfo(module, patientId))
             .map(certificateTypeInfoDTO -> addAdditionalResourceLinks(certificateTypeInfoDTO, patientId))
+            .map(certificateTypeInfoDTO -> addConfirmationModal(certificateTypeInfoDTO, patientId))
             .collect(Collectors.toList());
     }
 
     private CertificateTypeInfoDTO addAdditionalResourceLinks(CertificateTypeInfoDTO intygModule, Personnummer patientId) {
-        if (intygModule.getId().equals(DbModuleEntryPoint.MODULE_ID)) {
-            intygModule.getLinks().add(ResourceLinkFactory.confirmDodsbevis(true));
-        }
         if (intygModule.getId().equals(LuaenaEntryPoint.MODULE_ID) && patientOlderThanThirtyYearsAndTwoMonths(patientId)) {
             intygModule.getLinks().add(ResourceLinkFactory.confirmLuaena(true));
         }
         missingRelatedCertificateConfirmation.get(intygModule.getId(), patientId)
             .ifPresent(resourceLinkDTO -> intygModule.getLinks().add(resourceLinkDTO));
+        return intygModule;
+    }
+
+    private CertificateTypeInfoDTO addConfirmationModal(CertificateTypeInfoDTO intygModule, Personnummer patientId) {
+        final var isAllowedToEdit = intygModule.getLinks().stream()
+            .anyMatch(link -> link.getType() == ResourceLinkTypeDTO.EDIT_CERTIFICATE);
+        final var provider = ConfirmationModalProviderResolver.getConfirmation(intygModule.getId(), CertificateStatus.UNSIGNED,
+            webCertUserService.getUser(), true, isAllowedToEdit);
+        if (provider != null) {
+            final var latestCertificateVersion = intygTextsService.getLatestVersion(intygModule.getId());
+            final var patient = patientDetailsResolver.resolvePatient(patientId, intygModule.getId(), latestCertificateVersion);
+            intygModule.setConfirmationModal(
+                provider.create(patient.getFullstandigtNamn(), patientId.getPersonnummerWithDash(),
+                    webCertUserService.getUser().getOrigin())
+            );
+        }
+
         return intygModule;
     }
 
@@ -102,7 +124,7 @@ public class GetCertificateTypesFacadeServiceImpl implements GetCertificateTypes
         certificateTypeInfo.setIssuerTypeId(module.getIssuerTypeId());
         certificateTypeInfo.setLinks(convertResourceLinks(module.getLinks()));
         certificateTypeMessageService.get(module.getId(), patientId)
-            .ifPresent((message) -> certificateTypeInfo.setMessage(message.getMessage()));
+            .ifPresent(message -> certificateTypeInfo.setMessage(message.getMessage()));
         return certificateTypeInfo;
     }
 
@@ -130,13 +152,14 @@ public class GetCertificateTypesFacadeServiceImpl implements GetCertificateTypes
         final var intygModules = intygModuleRegistry.listAllModules();
         final var allowedCertificateTypes = authoritiesHelper.getIntygstyperForPrivilege(webCertUserService.getUser(),
             AuthoritiesConstants.PRIVILEGE_SKRIVA_INTYG);
+        final var inactiveCertificateTypes = featuresHelper.getCertificateTypesForFeature(AuthoritiesConstants.FEATURE_INACTIVE_CERTIFICATE_TYPE);
 
         final var intygModuleDTOs = intygModules.stream()
             .map(IntygModuleDTO::new)
-            .filter((intygModule) -> allowedCertificateTypes.contains(intygModule.getId()))
-            .filter((intygModule) -> intygModule.isDisplayDeprecated() || !intygModule.isDeprecated())
-            .filter((intygModule) -> intygTextsService.getLatestVersion(intygModule.getId()) != null)
-            .collect(Collectors.toList());
+            .filter(intygModuleDTO -> !inactiveCertificateTypes.contains(intygModuleDTO.getId()))
+            .filter(intygModule -> allowedCertificateTypes.contains(intygModule.getId()))
+            .filter(intygModule -> intygTextsService.getLatestVersion(intygModule.getId()) != null)
+            .toList();
 
         resourceLinkHelper.decorateIntygModuleWithValidActionLinks(intygModuleDTOs, personnummer);
 
@@ -144,7 +167,7 @@ public class GetCertificateTypesFacadeServiceImpl implements GetCertificateTypes
     }
 
     private boolean patientOlderThanThirtyYearsAndTwoMonths(Personnummer patientId) {
-        final var birthDate = LocalDate.parse(patientId.getPersonnummer().substring(0, 8), DateTimeFormatter.ofPattern("yyyyMMdd"));
+        final var birthDate = PatientToolkit.birthDate(patientId);
         return LocalDate.now(ZoneId.systemDefault()).isAfter(birthDate.plusYears(30).plusMonths(2));
     }
 }
