@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2024 Inera AB (http://www.inera.se)
+ * Copyright (C) 2025 Inera AB (http://www.inera.se)
  *
  * This file is part of sklintyg (https://github.com/sklintyg).
  *
@@ -18,16 +18,14 @@
  */
 package se.inera.intyg.webcert.web.web.controller.facade;
 
+import jakarta.annotation.PostConstruct;
+import jakarta.ws.rs.GET;
+import jakarta.ws.rs.Path;
+import jakarta.ws.rs.Produces;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
 import java.util.Map;
-import java.util.stream.Collectors;
-import javax.annotation.PostConstruct;
-import javax.ws.rs.GET;
-import javax.ws.rs.Path;
-import javax.ws.rs.Produces;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.web.context.support.SpringBeanAutowiringSupport;
@@ -36,12 +34,13 @@ import se.inera.intyg.infra.dynamiclink.model.DynamicLink;
 import se.inera.intyg.infra.dynamiclink.service.DynamicLinkService;
 import se.inera.intyg.infra.integration.ia.services.IABannerService;
 import se.inera.intyg.infra.monitoring.annotation.PrometheusTimeMethod;
+import se.inera.intyg.webcert.logging.MdcLogConstants;
+import se.inera.intyg.webcert.logging.PerformanceLogging;
 import se.inera.intyg.webcert.web.web.controller.facade.dto.ConfigurationDTO;
 
 @Path("/configuration")
+@Slf4j
 public class ConfigController {
-
-    private static final Logger LOG = LoggerFactory.getLogger(UserController.class);
 
     private static final String UTF_8_CHARSET = ";charset=utf-8";
 
@@ -56,6 +55,9 @@ public class ConfigController {
 
     @Value("${privatepractitioner.portal.registration.url}")
     private String ppHost;
+
+    @Value("${forward.draft.or.question.url}")
+    private String forwardDraftOrQuestionUrl;
 
     @Autowired
     private DynamicLinkService dynamicLinkService;
@@ -72,22 +74,25 @@ public class ConfigController {
     @Path("/")
     @Produces(MediaType.APPLICATION_JSON + UTF_8_CHARSET)
     @PrometheusTimeMethod
+    @PerformanceLogging(eventAction = "config-get-configuration", eventType = MdcLogConstants.EVENT_TYPE_ACCESS)
     public Response getConfiguration() {
-        if (LOG.isDebugEnabled()) {
-            LOG.debug("Getting configuration");
+        if (log.isDebugEnabled()) {
+            log.debug("Getting configuration");
         }
         final var banners = iaBannerService.getCurrentBanners()
             .stream()
             .filter((banner -> banner.getApplication() == Application.WEBCERT))
-            .collect(Collectors.toList());
+            .toList();
 
-        return Response.ok(new ConfigurationDTO(version, banners, ppHost, sakerhetstjanstIdpUrl, cgiFunktionstjansterIdpUrl)).build();
+        return Response.ok(new ConfigurationDTO(version, banners, ppHost, sakerhetstjanstIdpUrl, cgiFunktionstjansterIdpUrl,
+            forwardDraftOrQuestionUrl)).build();
     }
 
     @GET
     @Path("/links")
     @Produces(MediaType.APPLICATION_JSON + UTF_8_CHARSET)
     @PrometheusTimeMethod
+    @PerformanceLogging(eventAction = "config-get-dynamic-links", eventType = MdcLogConstants.EVENT_TYPE_ACCESS)
     public Map<String, DynamicLink> getDynamicLinks() {
         return dynamicLinkService.getAllAsMap();
     }
